# multi-threaded-dpi-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
dpi-backend/dpi-analysis-backend/: DPI-Analysis-Backend.postman_collection.json  Dockerfile  build-and-run.sh  docker-compose.yml  pom.xml  test-api.sh
dpi-backend/dpi-analysis-backend/src/main/java/com/shravan/dpi/analysis/: DpiAnalysisApplication.java
dpi-backend/dpi-analysis-backend/src/main/java/com/shravan/dpi/analysis/config/: AiClientConfig.java  AsyncConfig.java  DpiEngineConfig.java  RedisConfig.java
dpi-backend/dpi-analysis-backend/src/main/java/com/shravan/dpi/analysis/controller/: AnalysisController.java  HealthController.java
dpi-backend/dpi-analysis-backend/src/main/java/com/shravan/dpi/analysis/exception/: AiServiceException.java  DpiExecutionException.java  GlobalExceptionHandler.java  JobNotFoundException.java
dpi-backend/dpi-analysis-backend/src/main/java/com/shravan/dpi/analysis/service/: AiService.java  (+2 more)
dpi-backend/dpi-analysis-backend/src/main/resources/: application.properties  application.yml
dpi-backend/dpi-analysis-backend/src/test/java/com/shravan/dpi/analysis/: DpiAnalysisBackendApplicationTests.java
dpi-engine/Packet_analyzer-main/Packet_analyzer-main/: CMakeLists.txt
dpi-engine/Packet_analyzer-main/Packet_analyzer-main/include/: dpi_engine.h  fast_path.h  load_balancer.h  types.h
dpi-engine/Packet_analyzer-main/Packet_analyzer-main/src/: dpi_engine.cpp  main_dpi.cpp
src/: connection_tracker.cpp  fast_path.cpp  load_balancer.cpp
(+11 files in other folders)
